Descripción de integrantes

--- a/juniortech/src/app/components/about/about.component.html
+++ b/juniortech/src/app/components/about/about.component.html
@@ -12,7 +12,7 @@
                     <img src="../../../assets/images/miembros/slimify-compressed/integrante (5).webp">
                     <div class="info">
                         <div class="title">Marianela Purretta</div>
-                        <p>Programadora | Fotógrafa profesional | La mamá del grupo</p>
+                        <p>Programadora | La diseñadora</p>
                     </div>
                     <ul>
                         <a href="https://github.com/MarianelaPurretta" target="_blank"><i class="bi bi-github"></i></a>
@@ -25,13 +25,13 @@
         <div class="card-column">
             <div class="card-wrapper">
                 <div class="card front-face">
-                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (5).webp">
+                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (4).webp">
                 </div>
                 <div class="card back-face">
-                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (5).webp">
+                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (4).webp">
                     <div class="info">
-                        <div class="title">Marianela Purretta</div>
-                        <p>Programadora | Fotógrafa profesional | La mamá del grupo</p>
+                        <div class="title">Joaquín Viñolo</div>
+                        <p>Programador | El carreras</p>
                     </div>
                     <ul>
                         <a href="https://github.com/MarianelaPurretta" target="_blank"><i class="bi bi-github"></i></a>
@@ -44,13 +44,13 @@
         <div class="card-column">
             <div class="card-wrapper">
                 <div class="card front-face">
-                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (5).webp">
+                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (1).webp">
                 </div>
                 <div class="card back-face">
-                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (5).webp">
+                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (1).webp">
                     <div class="info">
-                        <div class="title">Marianela Purretta</div>
-                        <p>Programadora | Fotógrafa profesional | La mamá del grupo</p>
+                        <div class="title">Nelson Lassa</div>
+                        <p>Programador | Pibe Java </p>
                     </div>
                     <ul>
                         <a href="https://github.com/MarianelaPurretta" target="_blank"><i class="bi bi-github"></i></a>
@@ -63,13 +63,13 @@
         <div class="card-column">
             <div class="card-wrapper">
                 <div class="card front-face">
-                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (5).webp">
+                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (3).webp">
                 </div>
                 <div class="card back-face">
-                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (5).webp">
+                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (3).webp">
                     <div class="info">
-                        <div class="title">Marianela Purretta</div>
-                        <p>Programadora | Fotógrafa profesional | La mamá del grupo</p>
+                        <div class="title">Franco Pagano</div>
+                        <p>Programador | El robotitos</p>
                     </div>
                     <ul>
                         <a href="https://github.com/MarianelaPurretta" target="_blank"><i class="bi bi-github"></i></a>
@@ -82,13 +82,13 @@
         <div class="card-column">
             <div class="card-wrapper">
                 <div class="card front-face">
-                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (5).webp">
+                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (2).webp">
                 </div>
                 <div class="card back-face">
-                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (5).webp">
+                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (2).webp">
                     <div class="info">
-                        <div class="title">Marianela Purretta</div>
-                        <p>Programadora | Fotógrafa profesional | La mamá del grupo</p>
+                        <div class="title">Yamil Yunes</div>
+                        <p>Programador | El base de datos</p>
                     </div>
                     <ul>
                         <a href="https://github.com/MarianelaPurretta" target="_blank"><i class="bi bi-github"></i></a>
@@ -101,13 +101,13 @@
         <div class="card-column">
             <div class="card-wrapper">
                 <div class="card front-face">
-                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (5).webp">
+                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (6).webp">
                 </div>
                 <div class="card back-face">
-                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (5).webp">
+                    <img src="../../../assets/images/miembros/slimify-compressed/integrante (6).webp">
                     <div class="info">
-                        <div class="title">Marianela Purretta</div>
-                        <p>Programadora | Fotógrafa profesional | La mamá del grupo</p>
+                        <div class="title">Mauro Barroso</div>
+                        <p>Programadora | Experto en fulbito</p>
                     </div>
                     <ul>
                         <a href="https://github.com/MarianelaPurretta" target="_blank"><i class="bi bi-github"></i></a>
