Compresión de imagenes

--- a/juniortech/src/app/app.component.html
+++ b/juniortech/src/app/app.component.html
@@ -13,7 +13,7 @@
 <div class="chat-icon-container" data-aos="zoom-in-up">
   <a href="https://www.stack-ai.com/chat-assistant/5e2826ce-2963-48e3-ab85-2465bbd7b5f5/c733b9ee-ef11-4d38-98a0-e0ce38231fb9/66872c12e45742192d1ef1a3" target="_blank">
     <!-- Ajusta la URL según sea necesario -->
-    <img src="../assets/images/chatbot/alcon-icon-chat.png" alt="Chat Icon" class="chat-icon">
+    <img src="../assets/images/chatbot/alcon-icon-chat.webp" alt="Chat Icon" class="chat-icon">
   </a>
   <div class="chat-bubble">
     Tenemos un largo viaje por delante, <br> ¿te apetece charlar?
