Icono de navbar con efecto

--- a/juniortech/src/app/components/carousel/carousel.component.html
+++ b/juniortech/src/app/components/carousel/carousel.component.html
@@ -17,17 +17,17 @@
       <img src="../../../assets/images/banner/banner.jpg" class="d-block w-100 carousel-image" alt="...">
       <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
         <h1 class="animate-text">¿Ya viste nuestro último video?</h1>
-        <h5 class="carousel-title">Corré a ver nuestro último video de Proyecto Python!!</h5>
+        <h5 class="carousel-title">Corré a ver nuestro último video de E-commerce Trooper Stay!!</h5>
         <div class="card mt-3 animated-card">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/TMBL6uw-nCQ?si=jfFZKn-yA8zF2vlE"
+          <iframe width="460" height="215" src="https://www.youtube.com/embed/490voq0Dho8?si=_i-3O0TKkWkxzuwA"
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen loading="lazy"></iframe>
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           <div class="card-body">
 
           </div>
         </div>
-        <a href="https://www.youtube.com/watch?v=TMBL6uw-nCQ&t=13s" class="btn btn-success mt-3" target="_blank">Ver
+        <a href="https://www.youtube.com/watch?v=490voq0Dho8" class="btn btn-success mt-3" target="_blank">Ver
           ahora</a>
       </div>
     </div>
@@ -35,7 +35,7 @@
       <img src="../../../assets/images/banner/banner.jpg" class="d-block w-100 carousel-image" alt="...">
       <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
         <h1 class="animate-text">Novedades!!</h1>
-        <h5 class="carousel-title">Nuevo chatbot disponible en nuestra página</h5>
+        <h5 class="carousel-title">Nuevos proyectos añadidos y chatbot funcional</h5>
         <a (click)="chatbot()" class="btn btn-success mt-3">Probar ahora</a>
       </div>
     </div>
