--- a/juniortech/src/app/components/header/header.component.css
+++ b/juniortech/src/app/components/header/header.component.css
@@ -14,6 +14,14 @@ header {
   background-color: var(--color-card);
   font-weight: medium;
 }
+
+img{
+  transition: transform 0.3s ease, color 0.3s ease;
+}
+
+img:hover{
+  transform: scale(1.1);
+}
   
   
   
