--- a/juniortech/src/app/components/skills/skills.component.css
+++ b/juniortech/src/app/components/skills/skills.component.css
@@ -25,12 +25,25 @@
   text-align: center;
   width: 120px; /* Ajusta el tamaño según sea necesario */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease, color 0.3s ease, background-color 0.3s ease; 
+}
+
+.skill-card:hover{
+  transform: scale(1.1);  
+  box-shadow: 0 2px 12px var(--color-highlight);
+  color: var(--color-highlight);
 }
 
 .skill-icon {
   width: 40px; /* Ajusta el tamaño del ícono */
   height: 40px;
   margin-bottom: 10px;
+  transition: transform 0.3s ease, color 0.3s ease;
+}
+
+
+.skill-icon:hover{
+  transform: scale(1.3);
 }
 
 h2 {
