--- a/juniortech/src/app/components/projects/projects.component.css
+++ b/juniortech/src/app/components/projects/projects.component.css
@@ -22,6 +22,25 @@ h2{
   position: relative;
   background: var( --color-primary);
   padding: 20px;
+  transition: transform 0.3s ease, color 0.3s ease, background-color 0.3s ease; 
+}
+
+.skill-card {
+  background-color: rgba(0, 0, 0, 0.2); /* Negro transparente */
+  border-radius: 10px;
+  padding: 10px;
+  text-align: center;
+  width: 120px; /* Ajusta el tamaño según sea necesario */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  
+}
+
+
+
+.card:hover{
+  transform: scale(1.1);  
+  box-shadow: 0 2px 12px var(--color-highlight);
+  color: var(--color-highlight);
 }
 
 .card::after {
@@ -96,6 +115,7 @@ h2{
   font-size: 1.2rem;
   font-family: Arial, Helvetica, sans-serif;
   margin-bottom: 10px;
+  color:#FFFFFF;
 }
 
 .card-int__button {
@@ -103,7 +123,7 @@ h2{
   margin: 20px 0 0 0;
   padding: 7px 20px;
   width: 100%;
-  background-color: rgb(238, 246, 255);
+  background-color: rgba(85, 83, 83, 0.37);
   border: none;
   color: black;
   position: relative;
@@ -114,7 +134,7 @@ h2{
 }
 
 .card-int__button:active {
-  box-shadow: 0px 0px 15px rgba(0, 119, 255, 0.5);
+  box-shadow: 0px 0px 15px var(--color-highlight);
 }
 
 .card-int__button:hover::before {
@@ -136,14 +156,14 @@ h2{
 
 
 .card-int__button::before {
-  content: 'More for this article';
+  content: 'More for this article'; 
   color: white;
   display: flex;
   align-items: center;
   justify-content: center;
   position: absolute;
-  background: rgb(0,133,255);
-  background: linear-gradient(146deg, #0032a6 0%, #68aeff 100%);
+  background: var(--color-highlight);
+  background: linear-gradient(146deg, #0b5801 0%, #55f126 100%);
   width: 100%;
   height: 100%;
   top: 0;
