--- a/juniortech/src/app/components/projects/projects.component.css
+++ b/juniortech/src/app/components/projects/projects.component.css
@@ -39,6 +39,7 @@ h2{
 
 .card:hover{
   transform: scale(1.1);  
+  background-color: rgba(0, 0, 0, 0.541);
   box-shadow: 0 2px 12px var(--color-highlight);
   color: var(--color-highlight);
 }
@@ -131,6 +132,7 @@ h2{
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0);
   transition: box-shadow 0.1s ease-in;
   user-select: none;
+  font-weight: 600;
 }
 
 .card-int__button:active {
@@ -171,6 +173,7 @@ h2{
   transform: translateX(-99%);
   z-index: 1;
   animation: effect_one 10s infinite;
+  font-weight: 600;
 }
 
 .card-int__button:hover::before {
@@ -179,6 +182,7 @@ h2{
 
 .excerpt {
   font-size: 14px;
+  font-weight: 600;
 }
 
 @keyframes effect_one {
