--- a/juniortech/src/app/components/skills/skills.component.css
+++ b/juniortech/src/app/components/skills/skills.component.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
-  padding: 20px;
+  padding: 20px;  
 }
 
 .skill-category {
@@ -47,12 +47,14 @@
 }
 
 h2 {
-  color: white;
+  color: var(--color-highlight);
   font-size: 1.5em;
   text-align: center;
+  font-weight: bold;
 }
 
 h3 {
   color: white;
   font-size: 0.9em;
+  font-weight: 600;
 }
