Agregando imagenes de proyectos

--- a/juniortech/src/app/components/projects/projects.component.html
+++ b/juniortech/src/app/components/projects/projects.component.html
@@ -4,36 +4,36 @@
     <!-- Card 1 -->
     <div class="card">
       <div class="card__img">
-        <img src="../../../assets/images/proyectos/Trooper.png" alt="Descripción del proyecto" />
-        <span class="card__span">#Java</span>
+        <img src="../../../assets/images/proyectos/project-1.png" alt="Descripción del proyecto" />
+        <span class="card__span">#Dekstop</span>
       </div>
       <div class="card-int">
-        <p class="card-int__title">Project Title</p>
-        <p class="excerpt">Brief description of the project.</p>
+        <p class="card-int__title">Trooper Stay Java</p>
+        <p class="excerpt">Aplicación de escritorio construida en Java y JOptionPane</p>
         <button class="card-int__button">Show</button>
       </div>
     </div>
 
     <div class="card">
       <div class="card__img">
-        <img src="../../../assets/images/proyectos/Trooper.png" alt="Descripción del proyecto" />
-        <span class="card__span">#Python</span>
+        <img src="../../../assets/images/proyectos/project-2.png" alt="Descripción del proyecto" />
+        <span class="card__span">#Desktop</span>
       </div>
       <div class="card-int">
-        <p class="card-int__title">Project Title</p>
-        <p class="excerpt">Brief description of the project.</p>
+        <p class="card-int__title">Trooper Stay Python</p>
+        <p class="excerpt">Mejora del proyecto anterior construido en Python y TKinter</p>
         <button class="card-int__button">Show</button>
       </div>
     </div>
 
     <div class="card">
       <div class="card__img">
-        <img src="../../../assets/images/proyectos/Trooper.png" alt="Descripción del proyecto" />
-        <span class="card__span">Category</span>
+        <img src="../../../assets/images/proyectos/project-3.png" alt="Descripción del proyecto" />
+        <span class="card__span">#Web</span>        
       </div>
       <div class="card-int">
-        <p class="card-int__title">Project Title</p>
-        <p class="excerpt">Brief description of the project.</p>
+        <p class="card-int__title">Trooper Stay E-commerce</p>
+        <p class="excerpt">Aplicación Web SPA full stack</p>
         <button class="card-int__button">Show</button>
       </div>
     </div>
