--- a/juniortech/src/app/components/carousel/carousel.component.html
+++ b/juniortech/src/app/components/carousel/carousel.component.html
@@ -9,7 +9,7 @@
     <div class="carousel-item active">
       <img src="../../../assets/images/banner/banner.jpg" class="d-block w-100 carousel-image" alt="...">
       <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-        <h1 class="animate-text">Bienvenidos a Junior Tech Troopers</h1>
+        <h1 class="animate-text">Bienvenidos a <span class="span-1">Junior </span> <span class="span-2">Tech </span> <span class="span-3">Troopers</span></h1>
         <a routerLink="/contact" class="btn btn-success mt-3">Contactanos</a>
       </div>
     </div>
