--- a/juniortech/src/styles.css
+++ b/juniortech/src/styles.css
@@ -11,7 +11,7 @@
   --color-highlight: #35cf07; 
   --color-card: #00000025;
   
-  --font-primary: "Barlow", sans-serif;      /* Fuente principal */
+  --font-primary: "Bebas Neue", sans-serif;      /* Fuente principal */
   --font-secondary: "Poppins", sans-serif;   /* Fuente secundaria *//* Color destacado (Verde jade) */
 }
 
