Estilando textos de carousel

--- a/juniortech/src/styles.css
+++ b/juniortech/src/styles.css
@@ -12,7 +12,7 @@
   --color-card: #00000025;
   
   --font-primary: "Bebas Neue", sans-serif;      /* Fuente principal */
-  --font-secondary: "Poppins", sans-serif;   /* Fuente secundaria *//* Color destacado (Verde jade) */
+  --font-secondary: "Poppins", sans-serif;   /* Fuente secundaria */
 }
 
 body {
