Estilos de footer

--- a/juniortech/src/app/components/footer/footer.component.css
+++ b/juniortech/src/app/components/footer/footer.component.css
@@ -1,27 +1,45 @@
-/*footer*/
-#footer {
-    color: #fff;
-    font-size: 14px;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-  
+/* Footer Styling */
+.footer-nav {
+  background-color: #1f1f23;
+  padding: 3rem 0;
+  color: #fff;
+  font-size: 14px;
+}
+
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.footer-title {
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
+  font-weight: bold;
+  color: #c7c7c7;
+}
+
+.footer-description, .footer-location {
+  font-size: 0.9rem;
+  color: #b5b5b5;
+  margin-bottom: 1.2rem;
+}
+
+.footer-icons a {
+  color: #ffffff;
+  margin: 0 10px;
+  font-size: 1.5rem;
+  transition: color 0.3s ease;
+}
+
+.footer-icons a:hover {
+  color: #1b8d1b;
+}
+
+/* Responsive alignment */
+@media (min-width: 768px) {
+  .footer-container {
+      flex-direction: row;
+      justify-content: space-between;
   }
-  
-  #footer p {
-    color: #fff;
-    font-size: 14px;
-  }
-  
-  .footer-icons a {
-    color: #ffffff; /* Cambia este color según tu preferencia */
-    margin: 0 5px;
-    font-size: 1.5rem;
-    text-decoration: none;
-    transition: color 0.3s ease;
-  }
-  
-  .footer-icons a:hover {
-    color: #1b8d1b; /* Cambia este color al que desees para el hover */
-  }
-  
+}
