--- a/juniortech/src/app/components/footer/footer.component.html
+++ b/juniortech/src/app/components/footer/footer.component.html
@@ -1,19 +1,33 @@
-    <!--Footer-->
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #2d2d31">
-        <div class="container-fluid" id="footer">
-            <div class="row">
-                <footer>
-                    <p>Mendoza, Argentina</p>
-                    <legend></legend>
-                    <small>Se reservan los derechos © JTT 2024</small>
-                    <div class="footer-icons">
-                        <a href="mailto:juniortechtroopers@gmail.com" target="_blank"><i
-                                class="bi bi-envelope-check"></i></a>
-                        <a href="tel:+54678890" target="_blank"><i class="bi bi-telephone-outbound-fill"></i></a>
-                        <a href="whatsapp://send?text=Hola Marianela" target="_blank"><i class="bi bi-whatsapp"></i></a>
-                    </div>
-                </footer>
-            </div>
-
-            <div class="collapse navbar-collapse" id="navbarNav"></div>
+<!-- Footer -->
+<nav class="navbar navbar-expand-lg navbar-dark footer-nav">
+    <div class="container-fluid footer-container">
+      <div class="row w-100">
+  
+        <!-- About Section -->
+        <div class="col-md-4 text-center text-md-start">
+          <h5 class="footer-title">Acerca de nosotros</h5>
+          <p class="footer-description">Somos Junior Tech Troopers, apasionados por la tecnología y el desarrollo de soluciones digitales innovadoras.</p>
         </div>
+  
+        <!-- Contact and Location Section -->
+        <div class="col-md-4 text-center">
+          <h5 class="footer-title">Contacto</h5>
+          <p class="footer-location">Mendoza, Argentina</p>
+          <div class="footer-icons">
+            <a href="mailto:juniortechtroopers@gmail.com" target="_blank"><i class="bi bi-envelope-check"></i></a>
+            <a href="https://linkedin.com" target="_blank"><i class="bi bi-linkedin"></i></a>
+            <a href="https://facebook.com" target="_blank"><i class="bi bi-facebook"></i></a>
+            <a href="https://twitter.com" target="_blank"><i class="bi bi-twitter"></i></a>
+          </div>
+        </div>
+  
+        <!-- Copyright Section -->
+        <div class="col-md-4 text-center text-md-end">
+          <h5 class="footer-title">Derechos</h5>
+          <small>© JTT 2024 - Todos los derechos reservados</small>
+        </div>
+        
+      </div>
+    </div>
+  </nav>
+  
