--- a/juniortech/src/app/components/footer/footer.component.html
+++ b/juniortech/src/app/components/footer/footer.component.html
@@ -15,9 +15,9 @@
           <p class="footer-location">Mendoza, Argentina</p>
           <div class="footer-icons">
             <a href="mailto:juniortechtroopers@gmail.com" target="_blank"><i class="bi bi-envelope-check"></i></a>
-            <a href="https://linkedin.com" target="_blank"><i class="bi bi-linkedin"></i></a>
-            <a href="https://facebook.com" target="_blank"><i class="bi bi-facebook"></i></a>
-            <a href="https://twitter.com" target="_blank"><i class="bi bi-twitter"></i></a>
+            <a href="https://linkedin.com" target="_blank"><i class="bi bi-youtube"></i></a>
+            <a href="https://facebook.com" target="_blank"><i class="bi bi-github"></i></a>
+            <a href="https://twitter.com" target="_blank"><i class="bi bi-whatsapp"></i></a>
           </div>
         </div>
   
