Redes sociales de colaboradores

--- a/juniortech/src/app/components/about/about.component.html
+++ b/juniortech/src/app/components/about/about.component.html
@@ -6,7 +6,7 @@
             <div class="card-wrapper">
                 <div class="card front-face">
                     <img src="../../../assets/images/miembros/slimify-compressed/integrante (5).webp">
-                    
+
                 </div>
                 <div class="card back-face">
                     <img src="../../../assets/images/miembros/slimify-compressed/integrante (5).webp">
@@ -16,8 +16,10 @@
                     </div>
                     <ul>
                         <a href="https://github.com/MarianelaPurretta" target="_blank"><i class="bi bi-github"></i></a>
-                        <a href="https://www.linkedin.com/in/marianela-purretta-842bb0254/" target="_blank"><i class="bi bi-linkedin"></i></a>
-                        <a href="https://www.instagram.com/marianela_purretta/" target="_blank"><i class="bi bi-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/marianela-purretta-842bb0254/" target="_blank"><i
+                                class="bi bi-linkedin"></i></a>
+                        <a href="https://www.instagram.com/marianela_purretta/" target="_blank"><i
+                                class="bi bi-instagram"></i></a>
                     </ul>
                 </div>
             </div>
@@ -34,9 +36,11 @@
                         <p>Programador | El carreras</p>
                     </div>
                     <ul>
-                        <a href="https://github.com/MarianelaPurretta" target="_blank"><i class="bi bi-github"></i></a>
-                        <a href="https://www.linkedin.com/in/marianela-purretta-842bb0254/" target="_blank"><i class="bi bi-linkedin"></i></a>
-                        <a href="https://www.instagram.com/marianela_purretta/" target="_blank"><i class="bi bi-instagram"></i></a>
+                        <a href="https://github.com/joaquin9830" target="_blank"><i class="bi bi-github"></i></a>
+                        <a href="https://www.linkedin.com/in/joaquin-vinolo98/" target="_blank"><i
+                                class="bi bi-linkedin"></i></a>
+                        <a href="https://www.instagram.com/joaquin_vinolo/?next=%2F" target="_blank"><i
+                                class="bi bi-instagram"></i></a>
                     </ul>
                 </div>
             </div>
@@ -53,9 +57,11 @@
                         <p>Programador | Pibe Java </p>
                     </div>
                     <ul>
-                        <a href="https://github.com/MarianelaPurretta" target="_blank"><i class="bi bi-github"></i></a>
-                        <a href="https://www.linkedin.com/in/marianela-purretta-842bb0254/" target="_blank"><i class="bi bi-linkedin"></i></a>
-                        <a href="https://www.instagram.com/marianela_purretta/" target="_blank"><i class="bi bi-instagram"></i></a>
+                        <a href="https://github.com/NelsonLassa" target="_blank"><i class="bi bi-github"></i></a>
+                        <a href="https://www.linkedin.com/in/nelson-lassa/" target="_blank"><i
+                                class="bi bi-linkedin"></i></a>
+                        <a href="https://www.instagram.com/nelsonlassa/" target="_blank"><i
+                                class="bi bi-instagram"></i></a>
                     </ul>
                 </div>
             </div>
@@ -72,9 +78,11 @@
                         <p>Programador | El robotitos</p>
                     </div>
                     <ul>
-                        <a href="https://github.com/MarianelaPurretta" target="_blank"><i class="bi bi-github"></i></a>
-                        <a href="https://www.linkedin.com/in/marianela-purretta-842bb0254/" target="_blank"><i class="bi bi-linkedin"></i></a>
-                        <a href="https://www.instagram.com/marianela_purretta/" target="_blank"><i class="bi bi-instagram"></i></a>
+                        <a href="https://github.com/PaganoFranco" target="_blank"><i class="bi bi-github"></i></a>
+                        <a href="https://www.linkedin.com/in/franco-pagano-341814235/" target="_blank"><i
+                                class="bi bi-linkedin"></i></a>
+                        <a href="https://www.instagram.com/franco_pagano24/" target="_blank"><i
+                                class="bi bi-instagram"></i></a>
                     </ul>
                 </div>
             </div>
@@ -91,9 +99,11 @@
                         <p>Programador | El base de datos</p>
                     </div>
                     <ul>
-                        <a href="https://github.com/MarianelaPurretta" target="_blank"><i class="bi bi-github"></i></a>
-                        <a href="https://www.linkedin.com/in/marianela-purretta-842bb0254/" target="_blank"><i class="bi bi-linkedin"></i></a>
-                        <a href="https://www.instagram.com/marianela_purretta/" target="_blank"><i class="bi bi-instagram"></i></a>
+                        <a href="https://github.com/yunesyamil" target="_blank"><i class="bi bi-github"></i></a>
+                        <a href="https://www.linkedin.com/in/yunesyamil?miniProfileUrn=urn%3Ali%3Afs_miniProfile%3AACoAADAFQ7AB5zYJs3H_P1MTGhrLI91U5wCytT8&lipi=urn%3Ali%3Apage%3Ad_flagship3_search_srp_all%3BFafNyyVvRmqTwJcpoiTggA%3D%3D"
+                            target="_blank"><i class="bi bi-linkedin"></i></a>
+                        <a href="https://www.instagram.com/yamiljesus_/" target="_blank"><i
+                                class="bi bi-instagram"></i></a>
                     </ul>
                 </div>
             </div>
@@ -110,9 +120,9 @@
                         <p>Programadora | Experto en fulbito</p>
                     </div>
                     <ul>
-                        <a href="https://github.com/MarianelaPurretta" target="_blank"><i class="bi bi-github"></i></a>
-                        <a href="https://www.linkedin.com/in/marianela-purretta-842bb0254/" target="_blank"><i class="bi bi-linkedin"></i></a>
-                        <a href="https://www.instagram.com/marianela_purretta/" target="_blank"><i class="bi bi-instagram"></i></a>
+                        <a href="https://github.com/Maujj1999" target="_blank"><i class="bi bi-github"></i></a>
+                        <a href="https://www.instagram.com/barroso_mauro/" target="_blank"><i
+                                class="bi bi-instagram"></i></a>
                     </ul>
                 </div>
             </div>
