--- a/juniortech/src/app/components/footer/footer.component.html
+++ b/juniortech/src/app/components/footer/footer.component.html
@@ -15,8 +15,8 @@
           <p class="footer-location">Mendoza, Argentina</p>
           <div class="footer-icons">
             <a href="mailto:juniortechtroopers@gmail.com" target="_blank"><i class="bi bi-envelope-check"></i></a>
-            <a href="https://linkedin.com" target="_blank"><i class="bi bi-youtube"></i></a>
-            <a href="https://facebook.com" target="_blank"><i class="bi bi-github"></i></a>
+            <a href="https://www.youtube.com/@JuniorTechTroopers" target="_blank"><i class="bi bi-youtube"></i></a>
+            <a href="https://github.com/CodeStrong2023/JuniorTechTroopersE-commerse-Front" target="_blank"><i class="bi bi-github"></i></a>
             <a href="https://twitter.com" target="_blank"><i class="bi bi-whatsapp"></i></a>
           </div>
         </div>
