--- a/juniortech/src/app/components/footer/footer.component.html
+++ b/juniortech/src/app/components/footer/footer.component.html
@@ -17,7 +17,7 @@
             <a href="mailto:juniortechtroopers@gmail.com" target="_blank"><i class="bi bi-envelope-check"></i></a>
             <a href="https://www.youtube.com/@JuniorTechTroopers" target="_blank"><i class="bi bi-youtube"></i></a>
             <a href="https://github.com/CodeStrong2023/JuniorTechTroopersE-commerse-Front" target="_blank"><i class="bi bi-github"></i></a>
-            <a href="https://twitter.com" target="_blank"><i class="bi bi-whatsapp"></i></a>
+            <a href="tel:+542993298415" target="_blank"><i class="bi bi-whatsapp"></i></a>
           </div>
         </div>
   
