--- a/juniortech/src/app/components/skills/skills.component.html
+++ b/juniortech/src/app/components/skills/skills.component.html
@@ -1,5 +1,6 @@
 <div class="skills-container">
   <div class="skill-category">
+    <h2 class="skill-title">Habilidades del equipo</h2>
     <h2>Frontend</h2>
     <div class="skill-list">
       <div class="skill-card">
