--- a/juniortech/src/app/components/skills/skills.component.css
+++ b/juniortech/src/app/components/skills/skills.component.css
@@ -6,6 +6,15 @@
   height: 100vh;
 }
 
+.skill-title{
+  color: #e6e203;
+  margin-bottom: 30px;
+  font-size: 32px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
 .skill-category {
   display: flex;
   flex-direction: column;
